feat(tmux): add fzf-based session kill with lowercase x
- Override default `x` which kills the current pane
- Use display-popup + fzf to select a session and kill it
- Maintain uppercase X for consistency

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,12 +60,17 @@ bind-key s display-popup -E -w 80% -h 70% "\
     xargs tmux switch-client -t"
 
 # 5. 杀掉 Session (大写 X)
-# 作用：弹出浮窗选择要关闭的 Session
 bind-key X display-popup -E "\
     tmux list-sessions -F '#{session_name}' | \
     fzf --reverse --header 'Kill Session' | \
     xargs tmux kill-session -t"
 
+# --- 小写 x：选择会话并 kill （覆盖默认 kill-pane）
+unbind x
+bind-key x display-popup -E "\
+    tmux list-sessions -F '#{session_name}' | \
+    fzf --reverse --header 'Kill Session' | \
+    xargs tmux kill-session -t"
 # ============================================================
 # 3. 复制模式优化
 # ============================================================
