change the color and migrate to Arch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,7 +108,7 @@ if-shell "uname | grep -q Darwin" {
     set -g pane-active-border-style "fg=#bd93f9"
 }
 
-# 🐧 Linux Server (云端 - 红色)
+# 🐧 Linux Server (云端 - Blue)
 if-shell "uname | grep -q Linux" {
     set -g prefix C-e
     bind-key C-e send-prefix
@@ -120,8 +120,9 @@ if-shell "uname | grep -q Linux" {
     bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel 'base64 -w0 | sed -e "s/^/\x1b]52;c;/" -e "s/$/\x07/" > /dev/tty'
 
     # 主题
-    set -g status-style "bg=#44475a,fg=#f8f8f2"
-    set -g status-left "#[bg=#ff5555,fg=#282a36,bold] #S (CLOUD) #[bg=#44475a,fg=#ff5555,nobold]"
-    set -g window-status-current-style "bg=#ff5555,fg=#282a36,bold"
-    set -g pane-active-border-style "fg=#ff5555"
+set -g status-style "bg=#44475a,fg=#f8f8f2"
+set -g status-left "#[bg=#8be9fd,fg=#282a36,bold] #S (CLOUD) #[bg=#44475a,fg=#8be9fd,nobold]"
+set -g window-status-current-style "bg=#8be9fd,fg=#282a36,bold"
+set -g pane-active-border-style "fg=#8be9fd"
+
 }
