change the appearance of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,10 @@ set -ga terminal-overrides ",*:Tc"
 set -g mouse on
 set -g mode-keys vi
 setw -g aggressive-resize on
+set -g status-right ""
+
 
 # --- 视觉设置 ---
-set -g status-right "#[fg=#6272a4]#[bg=#6272a4,fg=#f8f8f2] %Y-%m-%d %H:%M "
 set -g status-left-length 50
 set -g window-status-style "fg=#6272a4"
 set -g window-status-format " #I:#W "
@@ -90,39 +91,51 @@ bind-key -T copy-mode-vi L send-keys -X bottom-line
 # 4. 差异化设置 (Mac/Linux 分离)
 # ============================================================
 
-# 🍎 macOS (本地 - 紫色)
+# 🍎 macOS (本地 - Purple Theme)
 if-shell "uname | grep -q Darwin" {
+    # Prefix 使用 C-q（避免与 macOS 冲突）
     set -g prefix C-q
     bind-key C-q send-prefix
+
+    # Mac 支持原生 clipboard（pbcopy/pbpaste）
     set -s set-clipboard on
     set -as terminal-overrides ',*:Ms=\E]52;%p1%s;%p2%s\007'
 
-    # ⚠️ y 和 Y 都复制到 Mac 剪贴板
+    # Copy mode → 全部复制到 macOS 剪贴板
     bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
     bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "pbcopy"
 
-    # 主题
-    set -g status-style "bg=#282a36,fg=#f8f8f2"
-    set -g status-left "#[bg=#bd93f9,fg=#282a36,bold] #S (MAC) #[bg=#282a36,fg=#bd93f9,nobold]"
+    # ---- Purple Dracula Theme ----
+    set -g status-style "bg=#282a36,fg=#f8f8f2"                # bar 背景深紫
+    set -g pane-active-border-style "fg=#bd93f9"              # active pane border 紫蓝
+
+    # 左侧标签
+    set -g status-left "#[bg=#bd93f9,fg=#282a36,bold] #S (MAC) #[bg=#282a36,fg=#bd93f9]"
+
+    # 当前窗口高亮颜色
     set -g window-status-current-style "fg=#bd93f9,bold"
-    set -g pane-active-border-style "fg=#bd93f9"
+
+		# show time
+		set -g status-right "#[fg=#6272a4]#[bg=#6272a4,fg=#f8f8f2] %Y-%m-%d %H:%M "
 }
 
-# 🐧 Linux Server (云端 - Blue)
+# 🐧 Linux Server (云端 - Blue Dracula Theme)
 if-shell "uname | grep -q Linux" {
     set -g prefix C-e
     bind-key C-e send-prefix
     set -s set-clipboard on
     set -as terminal-overrides ',*:Ms=\E]52;%p1%s;%p2%s\007'
-    
-    # ⚠️ y 和 Y 都使用强力 OSC 52 复制
-    bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'base64 -w0 | sed -e "s/^/\x1b]52;c;/" -e "s/$/\x07/" > /dev/tty'
-    bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel 'base64 -w0 | sed -e "s/^/\x1b]52;c;/" -e "s/$/\x07/" > /dev/tty'
 
-    # 主题
-set -g status-style "bg=#44475a,fg=#f8f8f2"
-set -g status-left "#[bg=#8be9fd,fg=#282a36,bold] #S (CLOUD) #[bg=#44475a,fg=#8be9fd,nobold]"
-set -g window-status-current-style "bg=#8be9fd,fg=#282a36,bold"
-set -g pane-active-border-style "fg=#8be9fd"
+    # Linux OSC52 强力复制
+    bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
+        'base64 -w0 | sed -e "s/^/\x1b]52;c;/" -e "s/$/\x07/" > /dev/tty'
+    bind-key -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel \
+        'base64 -w0 | sed -e "s/^/\x1b]52;c;/" -e "s/$/\x07/" > /dev/tty'
 
+    # ---- Blue Dracula Theme ----
+    set -g status-style "bg=#44475a,fg=#f8f8f2"
+    set -g status-left "#[bg=#8be9fd,fg=#282a36,bold] #S (CLOUD) #[bg=#44475a,fg=#8be9fd]"
+    set -g window-status-current-style "bg=#8be9fd,fg=#282a36,bold"
+    set -g pane-active-border-style "fg=#8be9fd"
 }
+
