improve the satus bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,8 +115,10 @@ if-shell "uname | grep -q Darwin" {
     # 当前窗口高亮颜色
     set -g window-status-current-style "fg=#bd93f9,bold"
 
-		# show time
-		set -g status-right "#[fg=#6272a4]#[bg=#6272a4,fg=#f8f8f2] %Y-%m-%d %H:%M "
+    # CPU/MEM 图形条 + 时间（仅 macOS 显示）
+    set -g status-interval 5
+    set -g status-right "#[fg=#6272a4]#[bg=#6272a4,fg=#f8f8f2] #(bash #{HOME}/Projects/Trae-projects/scripts/tmux_mac_sysbar.sh) %Y-%m-%d %H:%M "
+    if-shell "[ -d ~/.tmux/plugins/tpm ]" 'run-shell "~/.tmux/plugins/tpm/tpm"'
 }
 
 # 🐧 Linux Server (云端 - Blue Dracula Theme)
@@ -138,4 +140,3 @@ if-shell "uname | grep -q Linux" {
     set -g window-status-current-style "bg=#8be9fd,fg=#282a36,bold"
     set -g pane-active-border-style "fg=#8be9fd"
 }
-
